--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,12 @@
 {{ define "content" }}
 <h1 class="text-2xl font-bold mb-4">Task Manager</h1>
 
-<form hx-post="/addTask" hx-target="#taskList" hx-swap="innerHTML" method="POST" id="taskForm">
+<form hx-post="/addTask" 
+      hx-target="#taskList" 
+      hx-swap="innerHTML"
+      hx-on::after-request="if(event.detail.successful) this.reset()"
+      method="POST" 
+      id="taskForm">
     <input id="task" name="task" type="text" placeholder="Enter a task" class="border p-2 w-full mb-4">
     <button id="addTaskBtn" class="bg-blue-500 text-white p-2 rounded w-full" type="submit">Add Task</button>
 </form>
