update button label: change 'Uncompleted Tasks' to 'Active Tasks' for clarity

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
 <p id="output" class="mt-4 text-lg"></p>
 
 <div class="mt-4 flex gap-2">
-    <button class="bg-gray-300 p-2 rounded flex-1" hx-get="/getTasks" hx-target="#taskList" hx-swap="innerHTML">Uncompleted Tasks</button>
+    <button class="bg-gray-300 p-2 rounded flex-1" hx-get="/getTasks" hx-target="#taskList" hx-swap="innerHTML">Active Tasks</button>
     <button class="bg-gray-300 p-2 rounded flex-1" hx-get="/getCompletedTasks" hx-target="#taskList" hx-swap="innerHTML">Completed Tasks</button>
 </div>
 
